--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="pic/11.jpg" class="in_pic" />
                 </div>
                 <div class="left">
-                    <img src="pic/images.png" class="in_pic" />
+                    <img src="pic/21.jpg" class="in_pic" />
                 </div>
                 <div class="right">
                     <img src="pic/200-x-200.jpg" class="in_pic" />
