--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         <div class="wrap">
             <div class="cube">
                 <div class="front">
-                    <img src="pic/images.png" class="in_pic" />
+                    <img src="pic/t.png" class="in_pic" />
                 </div>
                 <div class="back">
-                    <img src="pic/200-x-200.jpg" class="in_pic" />
+                    <img src="pic/t1.jpg" class="in_pic" />
                 </div>
                 <div class="top">
-                    <img src="pic/images.png" class="in_pic" />
+                    <img src="pic/t2.jpg" class="in_pic" />
                 </div>
                 <div class="bottom">
-                    <img src="pic/11.jpg" class="in_pic" />
+                    <img src="pic/t3.jpg" class="in_pic" />
                 </div>
                 <div class="left">
-                    <img src="pic/22.jpg" class="in_pic" />
+                    <img src="pic/t5.jpg" class="in_pic" />
                 </div>
                 <div class="right">
-                    <img src="pic/200-x-200.jpg" class="in_pic" />
+                    <img src="pic/t6.jpg" class="in_pic" />
                 </div>
             </div>
         </div>
