--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="wrap">
             <div class="cube">
                 <div class="front">
-                    <img src="pic/t.png" class="in_pic" />
+                    <img src="pic/t.jpg" class="in_pic" />
                 </div>
                 <div class="back">
                     <img src="pic/t1.jpg" class="in_pic" />
