--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Css 3d Cube</title>
     <link rel="stylesheet" href="css/index.css" type="image/x-icon" />
     <div style="text-align:center;padding:10px;">
-        <h2>Css 3d Cube</h2>
+        <h2>Happy Birthday</h2>
         <div class="wrap">
             <div class="cube">
                 <div class="front">
